# gasp-monorepo

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .prototools  .sops.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  Tiltfile  commitlint.config.mjs  compose.yaml  docker-compose.yaml  go.mod  go.sum  go.work  go.work.sum  package-lock.json  package.json  release-please-config.json
gasp-node/: .dockerignore  .gitignore  .prototools  .releaserc.cjs  .releaserc.yaml  Cargo.toml  Dockerfile  Dockerfile.ci  Justfile  README.md  compose.persistent.yml  compose.yml  moon.yml  package.json  rust-toolchain.toml
gasp-node/pallets/bootstrap/src/: mock.rs
gasp-node/pallets/crowdloan-rewards/src/: mock.rs
gasp-node/pallets/fee-lock/: Cargo.toml
gasp-node/pallets/fee-lock/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
gasp-node/pallets/issuance/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
gasp-node/pallets/market/: Cargo.toml
gasp-node/pallets/market/rpc/: Cargo.toml
gasp-node/pallets/market/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
gasp-node/pallets/multipurpose-liquidity/src/: mock.rs
gasp-node/pallets/parachain-staking/: Cargo.toml
gasp-node/pallets/parachain-staking/src/: benchmarks.rs  lib.rs  mock.rs  tests.rs
gasp-node/pallets/proof-of-stake/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
gasp-node/pallets/rolldown/: Cargo.toml
gasp-node/pallets/stable-swap/: Cargo.toml
gasp-node/primitives/stable-swap/: Cargo.toml
gasp-node/rollup/node/: Cargo.toml
gasp-node/rollup/runtime/: Cargo.toml
gasp-node/scripts/: build-image.sh  run_benchmarks.sh
gasp-syncer/: Cargo.toml  Dockerfile  Dockerfile.local  compose.yml
gasp-syncer/bindings/src/: avs_directory.rs  avs_directory_mock.rs  bls_apk_registry.rs  bls_apk_registry_storage.rs  delegation_manager.rs  delegation_manager_storage.rs  erc20_mock.rs  finalizer_service_manager.rs  finalizer_task_manager.rs  finalizer_task_manager_test.rs  gasp_multi_rollup_service.rs  gasp_multi_rollup_service_deployer.rs  gasp_multi_rollup_service_storage.rs  gasp_multi_rollup_service_test.rs  i_delegation_manager.rs  i_finalizer_service_manager.rs  i_finalizer_task_manager.rs  i_gasp_multi_rollup_service.rs  i_gasp_multi_rollup_service_primitives.rs  i_registry_coordinator.rs  i_stake_registry.rs  i_strategy.rs  i_strategy_manager.rs  ibls_apk_registry.rs  lib.rs  registry_coordinator.rs  registry_coordinator_harness.rs  registry_coordinator_storage.rs  shared_types.rs  stake_registry.rs  stake_registry_harness.rs  stake_registry_storage.rs  strategy_manager.rs  strategy_manager_mock.rs  strategy_manager_storage.rs
gasp-syncer/src/: cli.rs  lib.rs  syncer.rs
gasp-syncer/src/chainio/: avs.rs  mod.rs
gasp-syncer/src/crypto/: keystore.rs
mangata-finalizer/: Cargo.toml
mangata-finalizer/bindings/src/: bls_pubkey_registry.rs  bls_pubkey_registry_storage.rs  bls_public_key_compendium_mock.rs  bls_registry_coordinator_with_indices_harness.rs  delegation_manager.rs  delegation_manager_mock.rs  delegation_manager_storage.rs  i_mangata_task_manager.rs  ibls_pubkey_registry.rs  ibls_public_key_compendium.rs  ibls_registry_coordinator_with_indices.rs  lib.rs  mangata_task_manager.rs  mangata_task_manager_test.rs  shared_types.rs  slasher.rs  stake_registry_storage.rs  strategy_manager_mock.rs  strategy_manager_storage.rs
mangata-finalizer/src/: cli.rs  lib.rs  rpc.rs
mangata-finalizer/src/chainio/: avs.rs  eigen.rs  mod.rs
mangata-finalizer/src/crypto/: bn254.rs  keystore.rs
mangata-finalizer/src/executor/: execute.rs  mod.rs  setup.rs  state.rs
operator_v2/: Cargo.toml
operator_v2/bindings/src/: bls_public_key_compendium.rs  bls_registry_coordinator_with_indices.rs  bls_registry_coordinator_with_indices_harness.rs  i_incredible_squaring_task_manager.rs  i_mangata_task_manager.rs  i_slasher.rs  ibls_pubkey_registry.rs  ibls_registry_coordinator_with_indices.rs  incredible_squaring_service_manager.rs  incredible_squaring_task_manager.rs  incredible_squaring_task_manager_test.rs  lib.rs  mangata_service_manager.rs  mangata_task_manager.rs  shared_types.rs
operator_v2/src/: cli.rs  config.rs  lib.rs  operator.rs
operator_v2/src/chainio/: avs.rs  eigen.rs  mod.rs
operator_v2/src/crypto/: bn254.rs
operator_v2/src/executor/: execute.rs  state.rs
sequencer/: .dockerignore  .releaserc.cjs  .releaserc.yaml  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.local  compose.yml  env  generate_bindings.sh  moon.yml  package.json  rust-toolchain.toml
sequencer/bindings/: Cargo.toml
sequencer/bindings/contracts/: Cargo.toml
sequencer/bindings/gasp/: Cargo.toml
sequencer/bindings/src/: ierc20.rs  ierc20metadata.rs  ierc20permit.rs  irolldown.rs  irolldownprimitives.rs  lib.rs  rolldown.rs  rolldowndeployer.rs  rolldowndeployertest.rs  rolldownstorage.rs  rolldowntest.rs
sequencer/closer/: Cargo.toml
sequencer/closer/src/: batch_subscription.rs  cli.rs  closer.rs  delay.rs  filter.rs  lib.rs  main.rs  metrics.rs  past_withdrawals_finder.rs
sequencer/common/: Cargo.toml
sequencer/common/src/: delay.rs  lib.rs  metrics.rs
sequencer/ferry-deposit/: Cargo.toml
sequencer/ferry-deposit/src/: cli.rs  ferry.rs  filter.rs  hunter.rs  main.rs  metrics.rs
sequencer/ferry-withdrawal/: Cargo.toml
sequencer/ferry-withdrawal/src/: cleaner.rs  cli.rs  executor.rs  ferry.rs  filter.rs  hunter.rs  lib.rs  main.rs  metrics.rs  test.rs  utils.rs
sequencer/l1api/: Cargo.toml
sequencer/l1api/src/: cicka.rs  erc20.rs  lib.rs  lru.rs  mock.rs  rolldown_contract.rs  test.rs  utils.rs
sequencer/l2api/: Cargo.toml
sequencer/l2api/src/: l2.rs  lib.rs  mock.rs  signer.rs
sequencer/l2cli/: Cargo.toml
sequencer/l2cli/src/: main.rs
sequencer/sequencer/: Cargo.toml  README.md  generate_bindings.sh  mat.txt  metadata.scale
sequencer/sequencer/src/: cli.rs  l1.rs  main.rs  metrics.rs  sequencer.rs  watchdog.rs
sequencer/stash-api/: Cargo.toml
sequencer/stash-api/src/: lib.rs
sequencer/types/: Cargo.toml
sequencer/types/src/: lib.rs
(+1351 files in other folders)
