[workspace.package]
authors = ["Mangata Team"]
edition = "2018"
repository = "https://github.com/gasp-xyz/mangata-node.git"
homepage = "https://gasp.xyz"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
panic = 'unwind'

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace]
resolver = "2"
members = [
	'pallets/*',
	'rpc/nonce',
	'rollup/node',
	'rollup/runtime',
	'rollup/runtime/integration-test',
]

[workspace.dependencies]
alloy-primitives = { version = "0.5.0", default-features = false }
alloy-sol-types = { version = "0.5.0", default-features = false }
aquamarine = "0.1.12"
array-bytes = "6.1"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
futures = "0.3.21"
hex = { version = "0.4.0", default-features = false }
hex-literal = { version = "0.3.3", default-features = false }
itertools = { version = "0.10.3", default-features = false }
jsonrpsee = { version = "0.22", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.0", features = ["derive"], default-features = false }
serde = { version = "1.0.188", default-features = false }
serde_json = { version = "1.0.128", default-features = false }

#dev
assert_matches = "1.3.0"
env_logger = "0.9.0"
lazy_static = "1.1.1"
mockall = "0.11.0"
serial_test = { version = "0.6.0", default-features = false }
similar-asserts = "1.1.0"
test-case = "2.0.2"
tokio = "1.22.0"

#orml
orml-asset-registry = { git = "https://github.com/gasp-xyz/open-runtime-module-library", branch = "eth-rollup-develop", default-features = false }
orml-tokens = { git = "https://github.com/gasp-xyz/open-runtime-module-library", branch = "eth-rollup-develop", default-features = false }
orml-traits = { git = "https://github.com/gasp-xyz/open-runtime-module-library", branch = "eth-rollup-develop", default-features = false }

#polkdadot sdk
extrinsic-shuffler = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
fork-tree = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-benchmarking = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-executive = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-support = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-support-procedural = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-support-procedural-tools = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-support-procedural-tools-derive = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-system = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-system-benchmarking = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
frame-try-runtime = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
mangata-support = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
mangata-types = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-aura = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-authorship = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-babe = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-balances = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-collective-mangata = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-grandpa = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-identity = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-membership = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-proxy = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-session = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-sudo-mangata = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-timestamp = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-transaction-payment = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-treasury = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-utility = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-utility-mangata = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
pallet-vesting-mangata = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-allocator = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-basic-authorship-ver = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-block-builder = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-block-builder-ver = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-chain-spec = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-chain-spec-derive = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-cli = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-client-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-client-db = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-consensus = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-consensus-aura = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-consensus-slots = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-executor = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-executor-common = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-executor-polkavm = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-executor-wasmtime = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-informant = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-keystore = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-mixnet = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-bitswap = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-common = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-gossip = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-light = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-sync = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-network-transactions = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-offchain = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-proposer-metrics = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-rpc = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-rpc-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-rpc-server = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-rpc-spec-v2 = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-service = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-state-db = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-sysinfo = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-telemetry = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-tracing = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-tracing-proc-macro = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-transaction-pool = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sc-utils = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-api-proc-macro = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-application-crypto = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-arithmetic = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-block-builder = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-blockchain = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-consensus = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-consensus-aura = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-consensus-babe = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-consensus-slots = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-core = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-crypto-hashing = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-crypto-hashing-proc-macro = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-database = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-debug-derive = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-externalities = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-genesis-builder = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-inherents = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-io = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-keyring = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-keystore = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-maybe-compressed-blob = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-metadata-ir = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-mixnet = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-offchain = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-panic-handler = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-rpc = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-runtime = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-runtime-interface = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-runtime-interface-proc-macro = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-session = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-staking = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-state-machine = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-statement-store = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-std = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-storage = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-timestamp = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-tracing = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-transaction-pool = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-trie = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-ver = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-version = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-version-proc-macro = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-wasm-interface = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
sp-weights = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-bip39 = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-build-script-utils = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-prometheus-endpoint = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-test-client = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-test-runtime = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-test-runtime-client = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
substrate-wasm-builder = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
try-runtime-cli = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }
ver-api = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop", default-features = false }

[patch."https://github.com/paritytech/polkadot-sdk"]
# ... which satisfies git dependency `sp-crypto-ec-utils` of package `sp-ark-bls12-381 v0.4.2 (https://github.com/paritytech/arkworks-substrate#caa2eed7)`
sp-crypto-ec-utils = { git = "https://github.com/gasp-xyz/polkadot-sdk", branch = "eth-rollup-develop" }

# patch generated by './scripts/dev_manifest.sh ../polkadot-sdk'
[patch."https://github.com/gasp-xyz/polkadot-sdk"]
substrate-test-runtime = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
substrate-test-runtime-client = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
substrate-test-client = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-transaction-payment = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-transaction-payment-rpc = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-collective-mangata = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-proxy = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-identity = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-sudo-mangata = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
mangata-support = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-utility-mangata = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-authorship = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-grandpa = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-vesting-mangata = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-system = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-system-benchmarking = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-system-rpc-runtime-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-support = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-support-procedural = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-support-procedural-tools = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-support-procedural-tools-derive = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-balances = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-aura = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-benchmarking = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-treasury = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-try-runtime = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-timestamp = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-babe = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-membership = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-utility = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-executive = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
pallet-session = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
substrate-wasm-builder = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
fork-tree = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
substrate-build-script-utils = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
frame-benchmarking-cli = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
substrate-bip39 = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
substrate-prometheus-endpoint = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-database = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-runtime-interface = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-runtime-interface-proc-macro = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-consensus-grandpa = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-consensus = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-consensus-aura = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-consensus-babe = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-consensus-slots = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-tracing = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-crypto-hashing = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-crypto-hashing-proc-macro = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-ver = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-maybe-compressed-blob = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-core = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-state-machine = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-keystore = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-metadata-ir = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-statement-store = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-weights = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-io = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-runtime = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-inherents = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-transaction-pool = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-std = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-storage = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-panic-handler = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-debug-derive = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-blockchain = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-externalities = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-mixnet = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-trie = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
mangata-types = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-version = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-version-proc-macro = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-block-builder = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-keyring = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-staking = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-wasm-interface = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-transaction-storage-proof = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
extrinsic-shuffler = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-arithmetic = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-api-proc-macro = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-offchain = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-timestamp = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-application-crypto = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-rpc = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
ver-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-genesis-builder = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sp-session = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-consensus-grandpa = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-consensus = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-consensus-aura = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-consensus-slots = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-tracing = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-tracing-proc-macro = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-rpc-spec-v2 = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-state-db = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-proposer-metrics = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-keystore = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-basic-authorship-ver = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-rpc-server = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-network = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-network-bitswap = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-network-transactions = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-network-common = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-network-light = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-network-sync = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-informant = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-transaction-pool = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-transaction-pool-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-utils = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-cli = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-chain-spec = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-chain-spec-derive = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-block-builder-ver = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-mixnet = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-block-builder = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-allocator = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-network-gossip = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-client-db = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-client-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-sysinfo = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-executor = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-executor-wasmtime = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-executor-common = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-executor-polkavm = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-telemetry = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-offchain = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-service = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-rpc = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }
sc-rpc-api = { git = "https://github.com//gasp-xyz/polkadot-sdk", branch = "fix/market-mint-ratio" }


# patch generated by './scripts/dev_manifest.sh ../polkadot-sdk/'
# [patch."https://github.com/gasp-xyz/polkadot-sdk"]
# substrate-wasm-builder = { path = "../polkadot-sdk/substrate/utils/wasm-builder" }
# frame-benchmarking-cli = { path = "../polkadot-sdk/substrate/utils/frame/benchmarking-cli" }
# substrate-bip39 = { path = "../polkadot-sdk/substrate/utils/substrate-bip39" }
# substrate-prometheus-endpoint = { path = "../polkadot-sdk/substrate/utils/prometheus" }
# fork-tree = { path = "../polkadot-sdk/substrate/utils/fork-tree" }
# substrate-build-script-utils = { path = "../polkadot-sdk/substrate/utils/build-script-utils" }
# substrate-test-client = { path = "../polkadot-sdk/substrate/test-utils/client" }
# substrate-test-runtime = { path = "../polkadot-sdk/substrate/test-utils/runtime" }
# substrate-test-runtime-client = { path = "../polkadot-sdk/substrate/test-utils/runtime/client" }
# frame-try-runtime = { path = "../polkadot-sdk/substrate/frame/try-runtime" }
# pallet-timestamp = { path = "../polkadot-sdk/substrate/frame/timestamp" }
# pallet-membership = { path = "../polkadot-sdk/substrate/frame/membership" }
# pallet-sudo-mangata = { path = "../polkadot-sdk/substrate/frame/sudo-mangata" }
# pallet-treasury = { path = "../polkadot-sdk/substrate/frame/treasury" }
# pallet-collective-mangata = { path = "../polkadot-sdk/substrate/frame/collective-mangata" }
# frame-system = { path = "../polkadot-sdk/substrate/frame/system" }
# frame-system-benchmarking = { path = "../polkadot-sdk/substrate/frame/system/benchmarking" }
# frame-system-rpc-runtime-api = { path = "../polkadot-sdk/substrate/frame/system/rpc/runtime-api" }
# mangata-support = { path = "../polkadot-sdk/substrate/frame/mangata-support" }
# pallet-balances = { path = "../polkadot-sdk/substrate/frame/balances" }
# pallet-aura = { path = "../polkadot-sdk/substrate/frame/aura" }
# pallet-vesting-mangata = { path = "../polkadot-sdk/substrate/frame/vesting-mangata" }
# pallet-session = { path = "../polkadot-sdk/substrate/frame/session" }
# pallet-utility-mangata = { path = "../polkadot-sdk/substrate/frame/utility-mangata" }
# pallet-identity = { path = "../polkadot-sdk/substrate/frame/identity" }
# pallet-utility = { path = "../polkadot-sdk/substrate/frame/utility" }
# pallet-authorship = { path = "../polkadot-sdk/substrate/frame/authorship" }
# frame-executive = { path = "../polkadot-sdk/substrate/frame/executive" }
# pallet-babe = { path = "../polkadot-sdk/substrate/frame/babe" }
# pallet-transaction-payment = { path = "../polkadot-sdk/substrate/frame/transaction-payment" }
# pallet-transaction-payment-rpc = { path = "../polkadot-sdk/substrate/frame/transaction-payment/rpc" }
# pallet-transaction-payment-rpc-runtime-api = { path = "../polkadot-sdk/substrate/frame/transaction-payment/rpc/runtime-api" }
# pallet-proxy = { path = "../polkadot-sdk/substrate/frame/proxy" }
# pallet-grandpa = { path = "../polkadot-sdk/substrate/frame/grandpa" }
# frame-support = { path = "../polkadot-sdk/substrate/frame/support" }
# frame-support-procedural = { path = "../polkadot-sdk/substrate/frame/support/procedural" }
# frame-support-procedural-tools = { path = "../polkadot-sdk/substrate/frame/support/procedural/tools" }
# frame-support-procedural-tools-derive = { path = "../polkadot-sdk/substrate/frame/support/procedural/tools/derive" }
# frame-benchmarking = { path = "../polkadot-sdk/substrate/frame/benchmarking" }
# sp-application-crypto = { path = "../polkadot-sdk/substrate/primitives/application-crypto" }
# sp-timestamp = { path = "../polkadot-sdk/substrate/primitives/timestamp" }
# sp-crypto-hashing = { path = "../polkadot-sdk/substrate/primitives/crypto/hashing" }
# sp-crypto-hashing-proc-macro = { path = "../polkadot-sdk/substrate/primitives/crypto/hashing/proc-macro" }
# sp-metadata-ir = { path = "../polkadot-sdk/substrate/primitives/metadata-ir" }
# sp-state-machine = { path = "../polkadot-sdk/substrate/primitives/state-machine" }
# sp-tracing = { path = "../polkadot-sdk/substrate/primitives/tracing" }
# sp-mixnet = { path = "../polkadot-sdk/substrate/primitives/mixnet" }
# sp-wasm-interface = { path = "../polkadot-sdk/substrate/primitives/wasm-interface" }
# sp-ver = { path = "../polkadot-sdk/substrate/primitives/ver" }
# sp-blockchain = { path = "../polkadot-sdk/substrate/primitives/blockchain" }
# sp-block-builder = { path = "../polkadot-sdk/substrate/primitives/block-builder" }
# sp-storage = { path = "../polkadot-sdk/substrate/primitives/storage" }
# sp-session = { path = "../polkadot-sdk/substrate/primitives/session" }
# sp-arithmetic = { path = "../polkadot-sdk/substrate/primitives/arithmetic" }
# sp-consensus = { path = "../polkadot-sdk/substrate/primitives/consensus/common" }
# sp-consensus-aura = { path = "../polkadot-sdk/substrate/primitives/consensus/aura" }
# sp-consensus-babe = { path = "../polkadot-sdk/substrate/primitives/consensus/babe" }
# sp-consensus-slots = { path = "../polkadot-sdk/substrate/primitives/consensus/slots" }
# sp-consensus-grandpa = { path = "../polkadot-sdk/substrate/primitives/consensus/grandpa" }
# sp-runtime-interface = { path = "../polkadot-sdk/substrate/primitives/runtime-interface" }
# sp-runtime-interface-proc-macro = { path = "../polkadot-sdk/substrate/primitives/runtime-interface/proc-macro" }
# ver-api = { path = "../polkadot-sdk/substrate/primitives/ver-api" }
# sp-keystore = { path = "../polkadot-sdk/substrate/primitives/keystore" }
# mangata-types = { path = "../polkadot-sdk/substrate/primitives/mangata-types" }
# sp-trie = { path = "../polkadot-sdk/substrate/primitives/trie" }
# sp-transaction-pool = { path = "../polkadot-sdk/substrate/primitives/transaction-pool" }
# sp-api = { path = "../polkadot-sdk/substrate/primitives/api" }
# sp-api-proc-macro = { path = "../polkadot-sdk/substrate/primitives/api/proc-macro" }
# sp-std = { path = "../polkadot-sdk/substrate/primitives/std" }
# sp-keyring = { path = "../polkadot-sdk/substrate/primitives/keyring" }
# sp-version = { path = "../polkadot-sdk/substrate/primitives/version" }
# sp-version-proc-macro = { path = "../polkadot-sdk/substrate/primitives/version/proc-macro" }
# sp-weights = { path = "../polkadot-sdk/substrate/primitives/weights" }
# sp-core = { path = "../polkadot-sdk/substrate/primitives/core" }
# sp-maybe-compressed-blob = { path = "../polkadot-sdk/substrate/primitives/maybe-compressed-blob" }
# extrinsic-shuffler = { path = "../polkadot-sdk/substrate/primitives/shuffler" }
# sp-panic-handler = { path = "../polkadot-sdk/substrate/primitives/panic-handler" }
# sp-inherents = { path = "../polkadot-sdk/substrate/primitives/inherents" }
# sp-transaction-storage-proof = { path = "../polkadot-sdk/substrate/primitives/transaction-storage-proof" }
# sp-runtime = { path = "../polkadot-sdk/substrate/primitives/runtime" }
# sp-io = { path = "../polkadot-sdk/substrate/primitives/io" }
# sp-database = { path = "../polkadot-sdk/substrate/primitives/database" }
# sp-debug-derive = { path = "../polkadot-sdk/substrate/primitives/debug-derive" }
# sp-staking = { path = "../polkadot-sdk/substrate/primitives/staking" }
# sp-rpc = { path = "../polkadot-sdk/substrate/primitives/rpc" }
# sp-offchain = { path = "../polkadot-sdk/substrate/primitives/offchain" }
# sp-statement-store = { path = "../polkadot-sdk/substrate/primitives/statement-store" }
# sp-externalities = { path = "../polkadot-sdk/substrate/primitives/externalities" }
# sp-genesis-builder = { path = "../polkadot-sdk/substrate/primitives/genesis-builder" }
# sc-allocator = { path = "../polkadot-sdk/substrate/client/allocator" }
# sc-rpc-spec-v2 = { path = "../polkadot-sdk/substrate/client/rpc-spec-v2" }
# sc-utils = { path = "../polkadot-sdk/substrate/client/utils" }
# sc-informant = { path = "../polkadot-sdk/substrate/client/informant" }
# sc-basic-authorship-ver = { path = "../polkadot-sdk/substrate/client/basic-authorship-ver" }
# sc-tracing = { path = "../polkadot-sdk/substrate/client/tracing" }
# sc-tracing-proc-macro = { path = "../polkadot-sdk/substrate/client/tracing/proc-macro" }
# sc-mixnet = { path = "../polkadot-sdk/substrate/client/mixnet" }
# sc-state-db = { path = "../polkadot-sdk/substrate/client/state-db" }
# sc-executor = { path = "../polkadot-sdk/substrate/client/executor" }
# sc-executor-polkavm = { path = "../polkadot-sdk/substrate/client/executor/polkavm" }
# sc-executor-wasmtime = { path = "../polkadot-sdk/substrate/client/executor/wasmtime" }
# sc-executor-common = { path = "../polkadot-sdk/substrate/client/executor/common" }
# sc-block-builder = { path = "../polkadot-sdk/substrate/client/block-builder" }
# sc-telemetry = { path = "../polkadot-sdk/substrate/client/telemetry" }
# sc-consensus = { path = "../polkadot-sdk/substrate/client/consensus/common" }
# sc-consensus-aura = { path = "../polkadot-sdk/substrate/client/consensus/aura" }
# sc-consensus-slots = { path = "../polkadot-sdk/substrate/client/consensus/slots" }
# sc-consensus-grandpa = { path = "../polkadot-sdk/substrate/client/consensus/grandpa" }
# sc-keystore = { path = "../polkadot-sdk/substrate/client/keystore" }
# sc-block-builder-ver = { path = "../polkadot-sdk/substrate/client/block-builder-ver" }
# sc-proposer-metrics = { path = "../polkadot-sdk/substrate/client/proposer-metrics" }
# sc-transaction-pool = { path = "../polkadot-sdk/substrate/client/transaction-pool" }
# sc-transaction-pool-api = { path = "../polkadot-sdk/substrate/client/transaction-pool/api" }
# sc-network = { path = "../polkadot-sdk/substrate/client/network" }
# sc-network-common = { path = "../polkadot-sdk/substrate/client/network/common" }
# sc-network-bitswap = { path = "../polkadot-sdk/substrate/client/network/bitswap" }
# sc-network-sync = { path = "../polkadot-sdk/substrate/client/network/sync" }
# sc-network-light = { path = "../polkadot-sdk/substrate/client/network/light" }
# sc-network-transactions = { path = "../polkadot-sdk/substrate/client/network/transactions" }
# sc-client-api = { path = "../polkadot-sdk/substrate/client/api" }
# sc-network-gossip = { path = "../polkadot-sdk/substrate/client/network-gossip" }
# sc-chain-spec = { path = "../polkadot-sdk/substrate/client/chain-spec" }
# sc-chain-spec-derive = { path = "../polkadot-sdk/substrate/client/chain-spec/derive" }
# sc-rpc-api = { path = "../polkadot-sdk/substrate/client/rpc-api" }
# sc-cli = { path = "../polkadot-sdk/substrate/client/cli" }
# sc-service = { path = "../polkadot-sdk/substrate/client/service" }
# sc-rpc-server = { path = "../polkadot-sdk/substrate/client/rpc-servers" }
# sc-sysinfo = { path = "../polkadot-sdk/substrate/client/sysinfo" }
# sc-client-db = { path = "../polkadot-sdk/substrate/client/db" }
# sc-rpc = { path = "../polkadot-sdk/substrate/client/rpc" }
# sc-offchain = { path = "../polkadot-sdk/substrate/client/offchain" }

# # patch generated by './scripts/dev_manifest.sh ../open-runtime-module-library/'
# [patch."https://github.com/gasp-xyz/open-runtime-module-library"]
# orml-tokens = { path = "../open-runtime-module-library/tokens" }
# orml-asset-registry = { path = "../open-runtime-module-library/asset-registry" }
# orml-traits = { path = "../open-runtime-module-library/traits" }
# orml-utilities = { path = "../open-runtime-module-library/utilities" }

